--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
     <!-- endbuild -->
     <script src="cordova.js"></script>
     <script src="telephonenumber.js"></script>
+    <script src="ContactChooser.js"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
